--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                     <h2>Major</h2>
                                     <h5>Mechanical Engineering</h5>
                                     <h2>Work in iGEM</h2>
-                                    <h5>wet</h5>
+                                    <h5>Hardware & Modeling</h5>
                                     <h2>A quote from iGEM</h2>
                                     <h5>xxx</h5>
                                 </div>
@@ -288,7 +288,7 @@
                                   <h2>Major</h2>
                                     <h5>Electrical Engineering</h5>
                                     <h2>Work in iGEM</h2>
-                                    <h5>wet</h5>
+                                    <h5>Hardware & Software</h5>
                                     <h2>A quote from iGEM</h2>
                                     <h5>xxx</h5>
                                 </div>  
@@ -307,7 +307,7 @@
                                     <h2>Major</h2>
                                     <h5>Energy</h5>
                                     <h2>Work in iGEM</h2>
-                                    <h5>wet</h5>
+                                    <h5>Modeling</h5>
                                     <h2>A quote from iGEM</h2>
                                     <h5>xxx</h5>
                                 </div>  
@@ -326,7 +326,7 @@
                                     <h2>Major</h2>
                                     <h5>Computer Science and Information Engineering</h5>
                                     <h2>Work in iGEM</h2>
-                                    <h5>wet</h5>
+                                    <h5>Software & Wiki</h5>
                                     <h2>A quote from iGEM</h2>
                                     <h5>xxx</h5>
                                 </div>  
@@ -345,7 +345,7 @@
                                     <h2>Major</h2>
                                     <h5>Materials Science and Engineering</h5>
                                     <h2>Work in iGEM</h2>
-                                    <h5>wet</h5>
+                                    <h5>Wiki</h5>
                                     <h2>A quote from iGEM</h2>
                                     <h5>xxx</h5>
                                 </div>  
@@ -367,7 +367,7 @@
                                     <h2>Major</h2>
                                     <h5>Economics & Accountancy</h5>
                                     <h2>Work in iGEM</h2>
-                                    <h5>wet</h5>
+                                    <h5>Human Practice</h5>
                                     <h2>A quote from iGEM</h2>
                                     <h5>xxx</h5>
                                 </div>  
