--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="header">
-            <h1>2018 NCKU iGEM</h1>
+            <h1>2018 NCKU iGEM Team Member</h1>
         </div>
         <div class="row">
             <div class="col-2 col-s-2">
@@ -28,14 +28,11 @@
                             <li class="item">Wet</li>
                         </div>
                         <div id="list4" onclick="test('#list4')">
-                            <li class="item">Dry</li>
+                            <li class="item">Dry & IT</li>
                         </div>
                         <div id="list5" onclick="test('#list5')">
-                            <li clasd="item">Hp</li>
-                        </div>
-                        <div>
-                            <li class="gototop">Go To Top</li>
-                        </div>        
+                            <li clasd="item">Human Practice</li>
+                        </div>     
                     </ul>
                 </div>
             </div>
@@ -70,12 +67,12 @@
                                     <h3>Shih-I, Tan</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Shih-I, Tan</h3>
                                     <h2>Major</h2>
                                     <h5>Chemical Engineering</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Wet Adviser</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>
                         </div>
@@ -89,12 +86,12 @@
                                     <h3>I-Yu, Chen</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>I-Yu, Chen</h3>
                                     <h2>Major</h2>
                                     <h5>Computer Science and Information Engineering</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Dry Adviser</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>   
                         </div>
@@ -108,12 +105,12 @@
                                     <h3>Wei-Xiang, Fu</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Wei-Xiang, Fu</h3>
                                     <h2>Major</h2>
                                     <h5>Mechanical Engineering</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Dry Adviser</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>   
                         </div>
@@ -130,12 +127,12 @@
                                     <h3>Chen-Wei, Chen</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Chen-Wei, Chen</h3>
                                     <h2>Major</h2>
                                     <h5>Medicine</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>wet</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>
                         </div>
@@ -149,12 +146,12 @@
                                     <h3>Li-Yun, Yuan</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Li-Yun, Yuan</h3>
                                     <h2>Major</h2>
                                     <h5>Physical Therapy</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>wet</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>
                         </div>
@@ -168,12 +165,12 @@
                                     <h3>Ting-So, Liu</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Ting-So, Liu</h3>
                                     <h2>Major</h2>
                                     <h5>Biotechnology and Bioindustry Sciences</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>wet</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>
                         </div>
@@ -187,12 +184,12 @@
                                     <h3>Hui-Yee, Ng</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Hui-Yee, Ng</h3>
                                     <h2>Major</h2>
                                     <h5>Life Sciences</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>wet</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>
                         </div>
@@ -206,12 +203,12 @@
                                     <h3>Zhen-yee, Wu</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Zhen-yee, Wu</h3>
                                     <h2>Major</h2>
                                     <h5>Biotechnology and Bioindustry Sciences</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>wet</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>
                         </div>
@@ -225,12 +222,12 @@
                                     <h3>Chee-Yun, Long</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Chee-Yun, Long</h3>
                                     <h2>Major</h2>
                                     <h5>Chemical Engineering</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>wet</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>
                         </div>
@@ -244,12 +241,12 @@
                                     <h3>Patrick Chong Jun Theng</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Patrick Chong Jun Theng</h3>
                                     <h2>Major</h2>
                                     <h5>Biotechnology and Bioindustry Sciences</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>wet</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>    
                         </div>
@@ -266,12 +263,12 @@
                                     <h3>Zhen-Hui, Hoe</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Zhen-Hui, Hoe</h3>
                                     <h2>Major</h2>
                                     <h5>Mechanical Engineering</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Hardware & Modeling</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>
                             </div>    
                         </div>
@@ -285,12 +282,12 @@
                                     <h3>Pin-Hsuan, Huang</h3>
                                 </div>
                                 <div class="namecard back">
-                                  <h2>Major</h2>
+                                    <h3>Pin-Hsuan, Huang</h3>
+                                    <h2>Major</h2>
                                     <h5>Electrical Engineering</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Hardware & Software</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>  
                             </div> 
                         </div>
@@ -304,12 +301,12 @@
                                     <h3>Yuan-Chen, Lee</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Yuan-Chen, Lee</h3>
                                     <h2>Major</h2>
                                     <h5>Energy</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Modeling</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>  
                             </div> 
                         </div>
@@ -323,12 +320,12 @@
                                     <h3>I-Chu, Hung</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>I-Chu, Hung</h3>
                                     <h2>Major</h2>
                                     <h5>Computer Science and Information Engineering</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Software & Wiki</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>  
                             </div> 
                         </div>
@@ -342,12 +339,12 @@
                                     <h3>Shih-Wei, Liu</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Shih-Wei, Liu</h3>
                                     <h2>Major</h2>
                                     <h5>Materials Science and Engineering</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Wiki</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>  
                             </div> 
                         </div>
@@ -364,12 +361,12 @@
                                     <h3>Chia-Jung, Wang</h3>
                                 </div>
                                 <div class="namecard back">
+                                    <h3>Chia-Jung, Wang</h3>
                                     <h2>Major</h2>
                                     <h5>Economics & Accountancy</h5>
                                     <h2>Work in iGEM</h2>
                                     <h5>Human Practice</h5>
-                                    <h2>A quote from iGEM</h2>
-                                    <h5>xxx</h5>
+                                    <h5 class="quote">xxx</h5>
                                 </div>  
                             </div> 
                         </div>
@@ -377,6 +374,9 @@
                 </div>
             </div>
         </div>
+        <div class="gototop">
+            <img src="https://i.imgur.com/X9CchuF.png">Go Top
+        </div>   
     </body>
     <script type="text/javascript" src="member.js"></script>
 </html>
