--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
             crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class="topbar">
+            <a id="bar1" href="#home" onclick="bar('#bar1')">
+                <div class="barclass">Home</div>
+            </a>
+            <a id="bar2" href="#project" onclick="bar('#bar2')">
+                <div class="barclass">Project</div>
+            </a>
+            <a id="bar3" href="#device" onclick="bar('#bar3')">
+                <div class="barclass">Device</div>
+            </a>
+            <a id="bar4" href="#safety" onclick="bar('#bar4')">
+                <div class="barclass">Safety</div>
+            </a>
+            <a id="bar5" href="#hp" onclick="bar('#bar5')">
+                <div class="barclass">Human Practice</div>
+            </a>
+            <a id="bar6" href="#team" onclick="bar('#bar6')">
+                <div class="barclass active">Team</div>
+            </a>
+        </div>
         <div class="header">
             <h1>2018 NCKU iGEM Team Member</h1>
         </div>
