Change back to origin path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>NCKU Tainan/Team member</title>
         <meta charset="utf-8"></meta>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="http://2018.igem.org/Team:NCKU_Tainan/css/team_member_css?action=raw&ctype=text/css">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <!--link rel="stylesheet" href="http://2018.igem.org/Team:NCKU_Tainan/css/team_member_css?action=raw&ctype=text/css"-->
         <link rel="icon" type="image/png" href="https://i.imgur.com/kdKHf1l.png">
         <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
         <script
@@ -427,5 +428,6 @@
             <img src="https://i.imgur.com/deiaqB8.png">Go Top
         </div>   
     </body>
-    <script type="text/javascript" src="http://2018.igem.org/Team:NCKU_Tainan/js/team_member_js?action=raw&ctype=text/javascript"></script>
+    <script type="text/javascript" src="member.js"></script>
+    <!--script type="text/javascript" src="http://2018.igem.org/Team:NCKU_Tainan/js/team_member_js?action=raw&ctype=text/javascript"></script-->
 </html>
